# iregex-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
book/: README.md  book.toml
book/src/: README.md  SUMMARY.md  boundaries.md  expression.md
book/src/matching/: root.md  sub.md
book/src/theory/: automata.md  language.md  tagged.md
crates/automata/: Cargo.toml  README.md
crates/automata/src/: dfa.rs  dot.rs  lib.rs  nfa.rs
crates/automata/src/nfa/: mod.rs  tags.rs
crates/syntax/: Cargo.toml  README.md
crates/syntax/src/: build.rs  display.rs  lib.rs  parsing.rs
src/: compiled.rs  lib.rs  regexp.rs
src/automaton/: deterministic.rs  mod.rs
src/ir/: affix.rs  alternation.rs  atom.rs  boundary.rs  concatenation.rs  mod.rs
tests/: matching.rs
