[package]
name = "iregex"
description = "Intermediate representation for Regular Expressions."
categories = ["text-processing"]
readme = "README.md"
documentation = "https://docs.rs/iregex"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[workspace.package]
authors = ["Timothée Haudebourg <timothee@haudebourg.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/timothee-haudebourg/iregex-rs"
edition = "2021"
rust-version = "1.66.1"
version = "0.1.0"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
iregex-automata = { version = "0.1.0", path = "crates/automata" }
iregex-syntax = { version = "0.1.0", path = "crates/syntax" }
thiserror = "1.0.57"
educe = "0.6.0"

[dependencies]
iregex-automata.workspace = true

[dev-dependencies]
iregex-automata = { workspace = true, features = ["dot"] }
