[package]
name = "iregex-automata"
description = "Finite automata definitions for the `iregex` crate."
keywords = ["regex", "dfa", "automata", "automaton", "nfa"]
categories = ["text-processing"]
readme = "README.md"
documentation = "https://docs.rs/iregex-automata"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
dot = []

[dependencies]
thiserror.workspace = true
educe.workspace = true
btree-range-map = "0.7.2"
range-traits = "0.3.2"
mown = "1.0"