[package]
name = "iregex-syntax"
description = "Common syntax for regular expressions."
readme = "README.md"
documentation = "https://docs.rs/iregex-syntax"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
iregex = { path = "../.." }
# iregex-automata.workspace = true
thiserror.workspace = true
replace_with = "0.1.7"